--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ set( RAYTRACER_LIBRARIES "" )
 # Add gcc options
 if( UNIX )
     set( RAYTRACER_DEFINITIONS
-        "${RAYTRACER_DEFINITIONS} -g -Wall -Wextra -Werror -pedantic -Wno-unused-parameter -Wno-deprecated-declarations" )
+        "${RAYTRACER_DEFINITIONS} -Ofast -Wall -Wextra -Werror -pedantic -Wno-unused-parameter -Wno-deprecated-declarations" )
     set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14" )
     set( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99" )
 endif()
