--- a/examples/test4.in
+++ b/examples/test4.in
@@ -2,10 +2,6 @@
 1  10  -2
 0   0   1
 30
-3
-   0    0    0   .5 .5 .5   0  0   0
--100 -100  100    1  1  1   1  0   0
-   1    4    3   .4 .4 .4   0  0   .01
 6
 solid       .6 .2 .4
 solid        1  0  0
@@ -16,12 +12,14 @@ texmap	     blur.ppm
         0.20  0.00  0.00   0.00
         0.00  0.20  0.00   0.00
 2
-0.7  0.3  0.0    1  0.0  0       0
-0.1  0.1  0.8  400  0.1  0.9  1.45
-6
-1 1 sphere   3   2  1     1
-2 1 sphere  -1   4  1     1
-3 1 sphere   1  -1  1     1
+0.9  0.0    1  0.0  0       0
+0.0  0.1  400  0.1  0.8  1.45
+8
+0 0 sphere  -100 -100 100   10  20  20  20
+0 0 sphere   1   4    3     1   10  10  10
+1 1 sphere   3   2    1     1   0  0  0
+2 1 sphere  -1   4    1     1   0  0  0
+3 1 sphere   1  -1    1     1   0  0  0
 5 0 polyhedron 3
          0  0  1 0.01
         -1 -1  0  -10
