--- a/examples/smallpt.in
+++ b/examples/smallpt.in
@@ -2,15 +2,16 @@
 50 45.614 145.936 
 0  1  0
 65
-4
+5
 solid       .75  .25  .25  
 solid       .25  .25  .75
 solid       .75  .75  .75
 solid       0    0    0
+solid       .999 .999 .999
 3
 1  0     500 0   0   0
 .0  0    1   1   0   0
-.0 .0    1   .3  .7   1.5
+.0 .0    1   .2  .8   1.5
 10
 0 0 sphere  100001 40.8 81.6 1e5 0 0 0
 1 0 sphere -99901 40.8 81.6 1e5 0 0 0
@@ -18,6 +19,6 @@ solid       0    0    0
 3 0 sphere 50 40.8  -99830 1e5 0 0 0
 2 0 sphere 50 100000  81.6  1e5 0 0 0
 2 0 sphere 50 -99918.4 81.6 1e5 0 0 0
-1 1 sphere 27 16.5 47  16.5 0 0 0  
-0 2 sphere 73 16.5 78  16.5 0 0 0
+4 1 sphere 27 16.5 47  16.5 0 0 0  
+4 2 sphere 73 16.5 78  16.5 0 0 0
 3 0 sphere 50 681.33 81.6 600 12 12 12
